added models, migrations and controllers. Also wrote all test cases

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,14 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= yield %>
+  <body class="container">
+    <div class="text-lg-end">
+      <% if user_signed_in? %>
+        <%= link_to 'Sign Out', destroy_user_session_path, method: 'delete', class: 'mt-2 mx-5 btn btn-secondary' %>
+      <% end %>
+    </div>
+    <div class="mx-5 mt-5">
+      <%= yield %>
+    </div>
   </body>
 </html>
